# open-models-react

./: .gitignore  pyproject.toml
apis/: ECMWF_docs.md
src/: benchmark.py  ecmwf.py  groq_agent.py  main.py  reference.py  utils.py
