[project]
name = "open-models-react"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "archytas>=1.3.18",
    "cartopy>=0.24.1",
    "cfgrib>=0.9.15.0",
    "contextily>=1.6.2",
    "folium>=0.19.5",
    "geopandas>=1.0.1",
    "groq>=0.22.0",
    "matplotlib>=3.10.1",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "tqdm>=4.67.1",
    "xarray>=2025.3.1",
]

[dependency-groups]
dev = [
    "easyrepl>=0.1.5",
    "rich>=13.9.4",
]
